--- a/project/team project2-data mining/리뷰분석.ipynb
+++ b/project/team project2-data mining/리뷰분석.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "12d957ba",
    "metadata": {},
    "outputs": [],
@@ -29,13 +29,370 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "07311d10",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('t_data_2023_2022.csv', index_col=0) "
+    "t_df = pd.read_csv('data/t_data_2023_2022.csv', index_col=0) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ae8a3eb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i_df = pd.read_csv('data/i_data_2023_2022.csv', index_col=0) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "112d6249",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>내용</th>\n",
+       "      <th>별점</th>\n",
+       "      <th>등록일</th>\n",
+       "      <th>분류</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>연수명</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>같이 읽고 함께 나누는 독서수업방법</th>\n",
+       "      <td>아이를 키우며 그림책과 동화책에 관심을 갖게 되었다.\\n감동적이고 재미있는 책들을 ...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2023.07.28</td>\n",
+       "      <td>긍정</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>강의의 품격</th>\n",
+       "      <td>비추천합니다. 새로울 것 없는 내용과 화질 안 좋은 것은 참겠는데 음향은 정말 괴로...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2023.07.27</td>\n",
+       "      <td>부정</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>신병주 교수의 왕으로 산다는 것</th>\n",
+       "      <td>조선왕들의 역사를 통하여 현재를 묻는 거울이 된다.\\n균형있는 강의 내용과 치우침이...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2023.07.27</td>\n",
+       "      <td>긍정</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15시간 메디컬 콘서트 1탄 - 현대인의 만성 질병</th>\n",
+       "      <td>잘못 알고 있던 의학 상식들을 제대로 알 수 있어 좋았어요</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2023.07.27</td>\n",
+       "      <td>긍정</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>정훈쌤의 뚝딱 칼림바</th>\n",
+       "      <td>칼림바 연수에서 칼림바와 악보를 선물로 받았습니다. 학생들이 음악 강사와 칼림바 수...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2023.07.26</td>\n",
+       "      <td>긍정</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6시간 한 번에 끝내는 법정연수 1</th>\n",
+       "      <td>감사합니다.</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2022.01.04</td>\n",
+       "      <td>긍정</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30시간 그림검사와 다양한 기법으로 만나는 미술치료</th>\n",
+       "      <td>강사분이 적극적으로 자세히 설명하는 부분이 너무 좋음</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2022.01.03</td>\n",
+       "      <td>긍정</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6시간 한 번에 끝내는 법정연수 1</th>\n",
+       "      <td>유익한 연수였습니다. 잘 들었습니다.</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2022.01.03</td>\n",
+       "      <td>긍정</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>당장 따라 할 수 있는 사계절 학급운영+이벤트</th>\n",
+       "      <td>담임 경력이 짧은데 내년 학년 아직 결정도 안 된 상태에서 내년 걱정만으로 겨울방학...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2022.01.03</td>\n",
+       "      <td>긍정</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>초등학생 탐구생활</th>\n",
+       "      <td>한 차시도 그냥 클릭으로 넘기고 싶지 않은, 나의 시간이 아깝지 않은 연수였어요.\\...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2022.01.02</td>\n",
+       "      <td>긍정</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1410 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                             내용  \\\n",
+       "연수명                                                                               \n",
+       "같이 읽고 함께 나누는 독서수업방법           아이를 키우며 그림책과 동화책에 관심을 갖게 되었다.\\n감동적이고 재미있는 책들을 ...   \n",
+       "강의의 품격                        비추천합니다. 새로울 것 없는 내용과 화질 안 좋은 것은 참겠는데 음향은 정말 괴로...   \n",
+       "신병주 교수의 왕으로 산다는 것             조선왕들의 역사를 통하여 현재를 묻는 거울이 된다.\\n균형있는 강의 내용과 치우침이...   \n",
+       "15시간 메디컬 콘서트 1탄 - 현대인의 만성 질병                   잘못 알고 있던 의학 상식들을 제대로 알 수 있어 좋았어요   \n",
+       "정훈쌤의 뚝딱 칼림바                   칼림바 연수에서 칼림바와 악보를 선물로 받았습니다. 학생들이 음악 강사와 칼림바 수...   \n",
+       "...                                                                         ...   \n",
+       "6시간 한 번에 끝내는 법정연수 1                                                      감사합니다.   \n",
+       "30시간 그림검사와 다양한 기법으로 만나는 미술치료                      강사분이 적극적으로 자세히 설명하는 부분이 너무 좋음   \n",
+       "6시간 한 번에 끝내는 법정연수 1                                        유익한 연수였습니다. 잘 들었습니다.   \n",
+       "당장 따라 할 수 있는 사계절 학급운영+이벤트     담임 경력이 짧은데 내년 학년 아직 결정도 안 된 상태에서 내년 걱정만으로 겨울방학...   \n",
+       "초등학생 탐구생활                     한 차시도 그냥 클릭으로 넘기고 싶지 않은, 나의 시간이 아깝지 않은 연수였어요.\\...   \n",
+       "\n",
+       "                              별점         등록일  분류  \n",
+       "연수명                                               \n",
+       "같이 읽고 함께 나누는 독서수업방법            5  2023.07.28  긍정  \n",
+       "강의의 품격                         3  2023.07.27  부정  \n",
+       "신병주 교수의 왕으로 산다는 것              5  2023.07.27  긍정  \n",
+       "15시간 메디컬 콘서트 1탄 - 현대인의 만성 질병   5  2023.07.27  긍정  \n",
+       "정훈쌤의 뚝딱 칼림바                    5  2023.07.26  긍정  \n",
+       "...                           ..         ...  ..  \n",
+       "6시간 한 번에 끝내는 법정연수 1            5  2022.01.04  긍정  \n",
+       "30시간 그림검사와 다양한 기법으로 만나는 미술치료   5  2022.01.03  긍정  \n",
+       "6시간 한 번에 끝내는 법정연수 1            5  2022.01.03  긍정  \n",
+       "당장 따라 할 수 있는 사계절 학급운영+이벤트      5  2022.01.03  긍정  \n",
+       "초등학생 탐구생활                      5  2022.01.02  긍정  \n",
+       "\n",
+       "[1410 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "187a60dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>연수명</th>\n",
+       "      <th>내용</th>\n",
+       "      <th>별점</th>\n",
+       "      <th>등록일</th>\n",
+       "      <th>분류</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>교사를 위한 구글 활용법(입문자편)</td>\n",
+       "      <td>구글의 다양한 활용방법을 쉽고 열정적으로 알려주신 강사님들 모습에 동기부여 받아, ...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2023.07.31</td>\n",
+       "      <td>긍정</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Z세대의 소통법, 유튜브 활용 교육</td>\n",
+       "      <td>유튜브의 전반적인 이해를 할 수 있어 수업 활용에 도움이 되었다.</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2023.07.30</td>\n",
+       "      <td>긍정</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>교사를 위한 구글 활용법(입문자편)</td>\n",
+       "      <td>구글의 다양한 기본 활용 방법을 익혀 수업에 활용하는데 도움이 될 거 같다.</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2023.07.30</td>\n",
+       "      <td>긍정</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>교사를 위한 구글 활용법(입문자편)</td>\n",
+       "      <td>요즘 구글로 자료를 수집하고 구글을 통해 아이들과 수업도 하는데 처음에는 익숙하지 ...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2023.07.28</td>\n",
+       "      <td>긍정</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>가장 쉬운 수업도구, 패들렛과 띵커벨</td>\n",
+       "      <td>패들렛과 띵커벨 활용하고 있었으나 다양한 교과에 특히 독서 지도에 많이 활용 할 수...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2023.07.28</td>\n",
+       "      <td>긍정</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2820</th>\n",
+       "      <td>꿈과 자존감이 자라는 교실 속 직업놀이 진로교육</td>\n",
+       "      <td>교실현장에서 아이들 특색맞춰 지도할 팁이 되었습니다</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2022.01.01</td>\n",
+       "      <td>긍정</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2821</th>\n",
+       "      <td>프로젝트수업으로 시작하는 교실 속 디자인씽킹</td>\n",
+       "      <td>추천합니다!</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2022.01.01</td>\n",
+       "      <td>긍정</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2822</th>\n",
+       "      <td>참쌤스쿨 그림교실, 교사가 최고의 콘텐츠다</td>\n",
+       "      <td>학교에서 만나는 아이들은 그림을 참 좋아한다. 연수 후기를 보다가 좋은 연수 같아서...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2022.01.01</td>\n",
+       "      <td>긍정</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2823</th>\n",
+       "      <td>Let's AI 인공지능 교육 활용편</td>\n",
+       "      <td>현실적으로 우리 생활 속에 많이 활용되고 있은 인공지능에 대해 알 수 있는 기회가 ...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2022.01.01</td>\n",
+       "      <td>긍정</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2824</th>\n",
+       "      <td>놀이와 질문이 함께하는 감동의 그림책 수업</td>\n",
+       "      <td>처음 독서수업을 하려고 준비할때 막막했는데, [놀이와 질문이 함께하는 감동의 그림책...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2022.01.01</td>\n",
+       "      <td>긍정</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12046 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             연수명  \\\n",
+       "0            교사를 위한 구글 활용법(입문자편)   \n",
+       "1            Z세대의 소통법, 유튜브 활용 교육   \n",
+       "2            교사를 위한 구글 활용법(입문자편)   \n",
+       "3            교사를 위한 구글 활용법(입문자편)   \n",
+       "4           가장 쉬운 수업도구, 패들렛과 띵커벨   \n",
+       "...                          ...   \n",
+       "2820  꿈과 자존감이 자라는 교실 속 직업놀이 진로교육   \n",
+       "2821    프로젝트수업으로 시작하는 교실 속 디자인씽킹   \n",
+       "2822     참쌤스쿨 그림교실, 교사가 최고의 콘텐츠다   \n",
+       "2823        Let's AI 인공지능 교육 활용편   \n",
+       "2824     놀이와 질문이 함께하는 감동의 그림책 수업   \n",
+       "\n",
+       "                                                     내용  별점         등록일  분류  \n",
+       "0     구글의 다양한 활용방법을 쉽고 열정적으로 알려주신 강사님들 모습에 동기부여 받아, ...   5  2023.07.31  긍정  \n",
+       "1                  유튜브의 전반적인 이해를 할 수 있어 수업 활용에 도움이 되었다.   5  2023.07.30  긍정  \n",
+       "2            구글의 다양한 기본 활용 방법을 익혀 수업에 활용하는데 도움이 될 거 같다.   5  2023.07.30  긍정  \n",
+       "3     요즘 구글로 자료를 수집하고 구글을 통해 아이들과 수업도 하는데 처음에는 익숙하지 ...   5  2023.07.28  긍정  \n",
+       "4     패들렛과 띵커벨 활용하고 있었으나 다양한 교과에 특히 독서 지도에 많이 활용 할 수...   5  2023.07.28  긍정  \n",
+       "...                                                 ...  ..         ...  ..  \n",
+       "2820                       교실현장에서 아이들 특색맞춰 지도할 팁이 되었습니다   5  2022.01.01  긍정  \n",
+       "2821                                             추천합니다!   5  2022.01.01  긍정  \n",
+       "2822  학교에서 만나는 아이들은 그림을 참 좋아한다. 연수 후기를 보다가 좋은 연수 같아서...   5  2022.01.01  긍정  \n",
+       "2823  현실적으로 우리 생활 속에 많이 활용되고 있은 인공지능에 대해 알 수 있는 기회가 ...   5  2022.01.01  긍정  \n",
+       "2824  처음 독서수업을 하려고 준비할때 막막했는데, [놀이와 질문이 함께하는 감동의 그림책...   5  2022.01.01  긍정  \n",
+       "\n",
+       "[12046 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d69f22f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2222da1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
