0801 대시보드 틀 잡음

--- a/project/team project2-data mining/대시보드.ipynb
+++ b/project/team project2-data mining/대시보드.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2158420e",
    "metadata": {},
    "outputs": [],
@@ -22,18 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "3079d618",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#이전에 했던거 복기"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "17e9f228",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +41,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x128b7d15ed0>"
+       "<IPython.lib.display.IFrame at 0x162f2e403a0>"
       ]
      },
      "metadata": {},
@@ -59,77 +49,74 @@
     }
    ],
    "source": [
-    "df = pd.read_excel('data/교육통계데이터_2015_2022_최종.xlsx') \n",
-    "\n",
-    "df2 = round(df.groupby(['시도', '연도'])['학업중단자_비율'].mean(), 2)\n",
-    "\n",
-    "df3 = round(df.groupby(['시도', '연도'])['교사수_비율'].mean(), 2)\n",
-    "\n",
-    "df4 = pd.concat([df2, df3], axis=1)\n",
-    "\n",
-    "df4 = df4.reset_index() \n",
-    "\n",
-    "df5 = df4.copy()\n",
-    "\n",
-    "for i in range(len(df4)):\n",
-    "    df4.loc[i,'비율값'] = df4.loc[i, '학업중단자_비율']\n",
-    "    df4.loc[i,'기준'] = \"학업중단자\"\n",
-    "\n",
-    "for i in range(len(df5)):\n",
-    "    df5.loc[i,'비율값'] = df5.loc[i, '교사수_비율']\n",
-    "    df5.loc[i,'기준'] = \"교사수\"\n",
-    "\n",
-    "df4 = df4.drop(['학업중단자_비율', '교사수_비율'], axis=1)\n",
-    "\n",
-    "df5 = df5.drop(['학업중단자_비율', '교사수_비율'], axis=1)\n",
-    "\n",
-    "df_graph = pd.concat([df4, df5])\n",
-    "\n",
-    "df_table = df[['연도', '시도', '행정구역', '학업중단자_비율', '교사수_비율']]\n",
+    "# 대시보드 틀 \n",
     "\n",
     "app = Dash(__name__)\n",
     "\n",
+    "# 구역1\n",
     "app.layout = html.Div([\n",
-    "    # 제목 \n",
-    "    html.H2(children='전문상담 교사 유무와 학업 중단자의 연관성 분석', style={'textAlign': 'center'}),\n",
+    "    # 구역2\n",
+    "    html.Div(className='row', children='티셀파와 아이스크림 연수원 연수후기 긍정/부정 분석', \n",
+    "             style={'textAlign': 'center', 'color': 'black', 'fontSize': 30}),\n",
     "    \n",
-    "    # 그래프는 시도를 기준으로 Dropdown하여 보여줌\n",
-    "    # 서울을 먼저 보여줌\n",
-    "    dcc.Dropdown(df_graph['시도'].unique(), '서울', id='dropdown-selection'),\n",
+    "    html.Div([\n",
+    "        html.Div([\n",
+    "            html.H5(children='<티셀파 연수 후기 긍정/부정 비율>', style={'textAlign':'center'}), \n",
+    "            dcc.Graph(figure=px.pie(values=[4500, 2500, 1053, 500], \n",
+    "                                    names=['Oxygen','Hydrogen','Carbon_Dioxide','Nitrogen']), \n",
+    "                      id='graph-1')\n",
+    "        ], style={'width': '49%', 'float': 'left', 'display': 'inline-block'}),\n",
+    "        html.Div([\n",
+    "            html.H5(children='<아이스크림 연수 후기 긍정/부정 비율>', style={'textAlign':'center'}), \n",
+    "            dcc.Graph(figure=px.pie(values=[4500, 2500, 1053, 500], \n",
+    "                                    names=['Oxygen','Hydrogen','Carbon_Dioxide','Nitrogen']), \n",
+    "                      id='graph-2')\n",
+    "        ], style={'width': '49%', 'float': 'right', 'display': 'inline-block'})\n",
+    "    ]),\n",
     "    \n",
-    "    # 전문상담 교사 비율과 학업 중단자의 비율을 paired plot으로 표현 \n",
-    "    html.H3(children='<연도별 전문상담교사와 학업중단자 비율 비교>', style={'textAlign': 'center'}),\n",
-    "    dcc.Graph(figure={}, id='graph-content1'),\n",
+    "    html.Div([\n",
+    "        html.Div([\n",
+    "            html.H5(children='<티셀파 연수 후기 긍정 단어 Top20>', style={'textAlign':'center'}), \n",
+    "            dcc.Graph(figure=px.bar(x=['A', 'B', 'C', 'D'], y=[1,2,3,4]), \n",
+    "                      id='graph-3')\n",
+    "        ], style={'width': '49%', 'float': 'left', 'display': 'inline-block'}),\n",
+    "        html.Div([\n",
+    "            html.H5(children='<아이스크림 연수 후기 긍정 단어 Top20>', style={'textAlign':'center'}), \n",
+    "            dcc.Graph(figure=px.bar(x=['A', 'B', 'C', 'D'], y=[1,2,3,4]), \n",
+    "                      id='graph-4')\n",
+    "        ], style={'width': '49%', 'float': 'right', 'display': 'inline-block'})\n",
+    "    ]),    \n",
     "    \n",
-    "    # 전문상담 교사 비율과 학업 중단자의 연도별 추세 표현 \n",
-    "    html.H3(children='<연도별 전문상담교사와 학업중단자 추세 비교>', style={'textAlign': 'center'}),\n",
-    "    dcc.Graph(figure={}, id='graph-content2'),\n",
+    "    html.Div([\n",
+    "        html.Div([\n",
+    "            html.H5(children='<티셀파 연수 후기 부정 단어 Top20>', style={'textAlign':'center'}), \n",
+    "            dcc.Graph(figure=px.bar(x=['A', 'B', 'C', 'D'], y=[1,2,3,4]), \n",
+    "                      id='graph-5')\n",
+    "        ], style={'width': '49%', 'float': 'left', 'display': 'inline-block'}),\n",
+    "        html.Div([\n",
+    "            html.H5(children='<아이스크림 연수 후기 부정 단어 Top20>', style={'textAlign':'center'}), \n",
+    "            dcc.Graph(figure=px.bar(x=['A', 'B', 'C', 'D'], y=[1,2,3,4]), \n",
+    "                      id='graph-6')\n",
+    "        ], style={'width': '49%', 'float': 'right', 'display': 'inline-block'})\n",
+    "    ]),\n",
     "    \n",
-    "    # 테이블은 시도별 업데이트를 하지않고 한번에 전체 시도의 테이블을 출력\n",
-    "    dash_table.DataTable(data=df_table.to_dict('records'), page_size=10) \n",
+    "    html.Div([\n",
+    "        html.Div([\n",
+    "            html.H5(children='<티셀파 연수 후기 워드클라우드>', style={'textAlign':'center'}), \n",
+    "            dcc.Graph(figure=px.bar(x=['A', 'B', 'C', 'D'], y=[1,2,3,4]), \n",
+    "                      id='graph-7')\n",
+    "        ], style={'width': '49%', 'float': 'left', 'display': 'inline-block'}),\n",
+    "        html.Div([\n",
+    "            html.H5(children='<아이스크림 연수 후기 워드클라우드>', style={'textAlign':'center'}), \n",
+    "            dcc.Graph(figure=px.bar(x=['A', 'B', 'C', 'D'], y=[1,2,3,4]), \n",
+    "                      id='graph-8')\n",
+    "        ], style={'width': '49%', 'float': 'right', 'display': 'inline-block'})\n",
+    "    ])\n",
+    "    \n",
     "])\n",
     "\n",
-    "\n",
-    "@app.callback(\n",
-    "    Output(\"graph-content1\", \"figure\"), \n",
-    "    Input(\"dropdown-selection\", \"value\"))\n",
-    "\n",
-    "def update_bar_chart(value):\n",
-    "    dff = df_graph[df_graph['시도']==value]\n",
-    "    return px.bar(dff, x=\"연도\", y=\"비율값\", color=\"기준\", barmode=\"group\",\n",
-    "                 labels=dict(비율값=\"연도별 전문상담교사와 학업중단자 비율\"))\n",
-    "\n",
-    "@app.callback(\n",
-    "    Output(\"graph-content2\", \"figure\"), \n",
-    "    Input(\"dropdown-selection\", \"value\"))\n",
-    "\n",
-    "def update_graph(value):\n",
-    "    dff = df_graph[df_graph['시도']==value]\n",
-    "    return px.line(dff, x=\"연도\", y=\"비율값\",color='기준', symbol='기준',\n",
-    "                  labels=dict(비율값=\"연도별 전문상담교사와 학업중단자 비율\")) \n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    app.run_server(debug=True)\n"
+    "if __name__ == '__main__':\n",
+    "    app.run(debug=True)"
    ]
   },
   {
