이미지 변경

--- a/project/team project2-data mining/대시보드.ipynb
+++ b/project/team project2-data mining/대시보드.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "3079d618",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2907a7b6a10>"
+       "<IPython.lib.display.IFrame at 0x2907a8f22c0>"
       ]
      },
      "metadata": {},
