--- a/project/team project2-data mining/대시보드.ipynb
+++ b/project/team project2-data mining/대시보드.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "2d49652c",
    "metadata": {},
    "outputs": [],
@@ -46,15 +46,15 @@
     "# 아이스크림 이미지 링크\n",
     "\n",
     "i_pie = \"https://github.com/hannah-OH/Python/blob/master/project/team%20project2-data%20mining/img/%EC%95%84%EC%9D%B4%EC%8A%A4%ED%81%AC%EB%A6%BC_%ED%8C%8C%EC%9D%B4%EC%B0%A8%ED%8A%B8.png?raw=true\"\n",
-    "i_p_bar = \"https://github.com/hannah-OH/Python/blob/master/project/team%20project2-data%20mining/img/%EC%95%84%EC%9D%B4%EC%8A%A4%ED%81%AC%EB%A6%BC_%EA%B8%8D%EC%A0%95_%EA%B7%B8%EB%9E%98%ED%94%84.png?raw=true\"\n",
-    "i_n_bar = \"https://github.com/hannah-OH/Python/blob/master/project/team%20project2-data%20mining/img/%EC%95%84%EC%9D%B4%EC%8A%A4%ED%81%AC%EB%A6%BC_%EB%B6%80%EC%A0%95_%EA%B7%B8%EB%9E%98%ED%94%84.png?raw=true\"\n",
+    "i_p_bar = \"https://github.com/hannah-OH/Python/blob/master/project/team%20project2-data%20mining/img/%EC%95%84%EC%9D%B4%EC%8A%A4%ED%81%AC%EB%A6%BC_%EB%B6%80%EC%A0%95_%EA%B7%B8%EB%9E%98%ED%94%842.png?raw=true\"\n",
+    "i_n_bar = \"https://github.com/hannah-OH/Python/blob/master/project/team%20project2-data%20mining/img/%EC%95%84%EC%9D%B4%EC%8A%A4%ED%81%AC%EB%A6%BC_%EA%B8%8D%EC%A0%95_%EA%B7%B8%EB%9E%98%ED%94%842.png?raw=true\"\n",
     "i_p_word = \"https://github.com/hannah-OH/Python/blob/master/project/team%20project2-data%20mining/img/%EC%95%84%EC%9D%B4%EC%8A%A4%ED%81%AC%EB%A6%BC_%EA%B8%8D%EC%A0%95_%EC%9B%8C%EB%93%9C+%ED%91%9C.png?raw=true\"\n",
     "i_n_word = \"https://github.com/hannah-OH/Python/blob/master/project/team%20project2-data%20mining/img/%EC%95%84%EC%9D%B4%EC%8A%A4%ED%81%AC%EB%A6%BC_%EB%B6%80%EC%A0%95_%EC%9B%8C%EB%93%9C+%ED%91%9C.png?raw=true\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "id": "3079d618",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2907a8f22c0>"
+       "<IPython.lib.display.IFrame at 0x2907ad10ca0>"
       ]
      },
      "metadata": {},
@@ -94,10 +94,10 @@
     "    # 파이차트\n",
     "    html.Div([\n",
     "        html.Div([\n",
-    "            html.Img(src=t_pie, style={'width': '49%', 'float': 'left', 'display': 'inline-block'})\n",
+    "            html.Img(src=t_pie, style={'width': '30%', 'float': 'left', 'display': 'inline-block'})\n",
     "        ]),\n",
     "        html.Div([\n",
-    "            html.Img(src=i_pie, style={'width': '49%', 'float': 'right', 'display': 'inline-block'})\n",
+    "            html.Img(src=i_pie, style={'width': '30%', 'float': 'right', 'display': 'inline-block'})\n",
     "        ])\n",
     "    ]),\n",
     "    \n",
